feat: documentation bank
